[gd_scene load_steps=7 format=3 uid="uid://chege7mda3e3i"]

[ext_resource type="Script" path="res://scenes/bola/bola.gd" id="1_5iuji"]
[ext_resource type="Texture2D" uid="uid://dhsfs5l3lydlc" path="res://assets/sprites/bola.png" id="1_kibdw"]
[ext_resource type="AudioStream" uid="uid://blbmje4qbfuca" path="res://assets/sons/impacto-bloco.wav" id="3_8b8io"]
[ext_resource type="AudioStream" uid="uid://bx2kjydopunhd" path="res://assets/sons/impacto-paddle.wav" id="4_m2bof"]
[ext_resource type="AudioStream" uid="uid://8opivib86rhs" path="res://assets/sons/impacto-tela.wav" id="5_dg7vy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs8ug"]

[node name="bola" type="Area2D"]
script = ExtResource("1_5iuji")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fs8ug")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kibdw")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SomImpactoBloco" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8b8io")

[node name="SomImpactoPaddle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_m2bof")

[node name="SomImpactoTela" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_dg7vy")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
